# adobe___spectrum-design-data

./: .gitignore  .lintstagedrc.js  .prototools  CLAUDE.md  README.md  moon.yml  pnpm-lock.yaml  pnpm-workspace.yaml
.changeset/: 04c2-gap-endpoint-serializer.md  04c3-gap-endpoint-registry.md  0jm-components-path-ci-gate.md  20260511-12e492d1.md  20260624-diff-generator-gfm-details.md  20260625-mode-set-split.md  20260625-si6.2-authoring-picker.md  20260625-si6.3-mode-set-forms.md  5p3-decompose-icon-scaleindex.md  a9t-legacykey-pin-relation-size.md  agent-mcp-read-tools-in-process.md  alias-threshold-calibration.md  authoring-session-mcp.md  b6-authoring-mcp-parity.md  cache-schema-v2.md  cascade-uuid-refs.md  changeset-linter-package-name-validation.md  colorfamily-aliases-decompose.md  config.json  core-shared-logic-extraction.md  d1-taxonomy-serializer.md  dataset-layout-spec-044.md  deprecate-spectrum-design-data-mcp.md  design-data-mcp-review-fixes.md  dg2-legacykey-pin-size-before-density.md  dsi1-drop-shadow-context-decomposition.md  dsi11-pin-state-anatomy-fusion.md  dsi12-line-height-font-size-reference.md  dsi21-stepper-qualifier-default-width.md  dsi23-corner-radius-role-shape.md  dsi27-weight-style-phase-d.md  dsi3-ordering-mismatch-legacykey.md  dsi6-decompose-scaleindex-colorrole.md  dsi7-legacykey-pin-density-before-size.md  embedded-db-cache-layer.md  expand-accessibility-role-vocabulary.md  feat-spec-941-property-migration.md  feat-token-naming-audit-tool.md  fix-icon-inverse-variant-decomposition.md  fix-platform-binary-publish.md  (+61 more)
.github/: ci-targets.json
.github/scripts/: check-ci-coverage.mjs
.github/workflows/: ci.yml  component-diff-pr-comment.yml  deploy-docs.yml  release.yml  token-diff-pr-comment.yml
.moon/: toolchain.yml  toolchains.yml  wasm-pack.toml  workspace.yml
.scout/: scout.config.yaml
docs/: rfc-coordination.md  scenarios.md
docs/proposals/: 001-typography-taxonomy.md  002-component-property-axes.md  003-numeric-scale-index.md  004-drop-shadow-classification.md  005-compound-states.md  006-vocabulary-gaps.md  008-ordinal-rank-field.md  009-typography-scale-composite.md  010-composite-token-support.md  011-string-name-escape-hatch.md  012-space-between-decompose.md
docs/release-timeline/: moon.yml
docs/s2-docs/: index.json
docs/s2-tokens-viewer/: .gitignore  CHANGELOG.md  SPIKE-NOTES.md  index.html  moon.yml  package.json
docs/s2-visualizer/: moon.yml
docs/site/: CHANGELOG.md  eleventy.config.js  moon.yml  package.json
docs/visualizer/: moon.yml
sdk/: CLAUDE.md  Cargo.toml  README.md  moon.yml
sdk/cli/: CHANGELOG.md  Cargo.toml  README.md  package.json
sdk/cli/src/: authoring.rs  lifecycle.rs  main.rs
sdk/cli/tests/: cli_manifest.rs  cli_tui.rs  cli_validate.rs
sdk/core/: Cargo.toml  build.rs
sdk/core/src/: cascade.rs  component.rs  diff.rs  graph.rs  legacy.rs  lib.rs  manifest.rs  migrate.rs  naming.rs  primer.rs  query.rs  registry.rs  registry_data.rs  report.rs  schema.rs  suggest.rs  write.rs
sdk/core/src/authoring/: draft.rs  mod.rs  mode_set.rs  session.rs
sdk/core/src/cache/: mem_backend.rs  mod.rs
sdk/core/src/data_source/: embedded.rs  fetch.rs  mod.rs
sdk/core/src/figma/: mapping.rs  types.rs
sdk/core/src/validate/: dataset_structure.rs  mod.rs
sdk/core/src/validate/rules/: mod.rs  spec001.rs  spec002.rs  spec003.rs  spec005.rs  spec008.rs  spec009.rs  spec014.rs  spec015.rs  spec017.rs  spec018.rs  spec021.rs  spec023.rs  spec024.rs  spec025.rs  spec026.rs  spec027.rs  spec028.rs  spec029.rs  spec030.rs  spec031.rs  spec032.rs  spec034.rs  spec035.rs  spec036.rs  spec037.rs  spec038.rs  spec039.rs  spec040.rs  spec041.rs  spec042.rs  spec043.rs  spec045.rs  spec046.rs  spec047.rs
sdk/core/tests/: prop_naming.rs  suggest_calibration.rs
sdk/scripts/: generate-registry-data.js  sync-cargo-version.mjs  test-sync-cargo-version.mjs
sdk/tui/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEMO.md  README.md  REPLAY.md  package.json
sdk/tui/src/: app.rs  app_launch.rs  app_palette.rs  app_views.rs  command.rs  find.rs  fuzzy.rs  help.rs  lib.rs  logo.rs  main.rs  message.rs  mode.rs  model.rs  naming.rs  runtime.rs  subscription.rs  update.rs  update_command.rs  view.rs  view_find.rs  wizard.rs  wizard_common.rs  wizard_draft.rs
sdk/tui/src/authoring/: forms.rs  mod.rs  mode_set.rs  mode_set_handlers.rs
sdk/tui/src/model/: views.rs
sdk/tui/src/model/views/: tests.rs
sdk/tui/src/update/: command.rs  lifecycle.rs  mouse.rs
sdk/tui/src/view/: authoring.rs  authoring_mode_set.rs  find.rs  home.rs  naming.rs  results.rs  shared.rs  wizard.rs
sdk/tui/src/wizard/: build.rs  draft.rs
sdk/tui/src/wizard_common/: classification.rs  facet.rs
sdk/tui/tests/: autocomplete.rs  budget.rs  describe.rs  find.rs  fuzzy.rs  m5.rs  manifest.rs  naming.rs  palette.rs  query.rs  render.rs  replay.rs  resolve.rs  runtime.rs  snapshots.rs  subscription.rs  toast.rs  validate.rs  wizard.rs  wizard_persistence.rs  write.rs
sdk/tui/tests/common/: mod.rs
sdk/tui/tests/fixtures/components/: button.json
sdk/tui/tests/fixtures/tokens-bad/: bad-token.json
sdk/tui/tests/snapshots/: snapshots__home_view_80x24.snap  snapshots__query_view_80x24.snap  snapshots__wizard_screen1_80x24.snap
sdk/wasm/: CHANGELOG.md  moon.yml  package.json
tools/changeset-linter/: CHANGELOG.md  moon.yml  package.json
tools/component-diff-generator/: moon.yml  package.json
tools/component-options-editor/: CHANGELOG.md  moon.yml  package.json
tools/demo/: README.md  agent-questions.md  broken-token-example.tokens.json  clean-component-example.json  demo-commands.sh  moon.yml  scenarios.md
tools/design-data-agent-mcp/: CHANGELOG.md  README.md  ava.config.js  moon.yml  package.json
tools/design-data-js/: ava.config.js  moon.yml  package.json
tools/design-data-mcp/: CHANGELOG.md  moon.yml  package.json
tools/design-data-skill/: CHANGELOG.md  moon.yml  package.json
(+134 files in other folders)
