[package]
name = "design-data-cli"
version = "0.7.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "design-data CLI — validate and inspect Spectrum design data"

[[bin]]
name = "design-data"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
design-data-core = { path = "../core", features = ["figma", "fetch"] }
design-data-tui = { path = "../tui" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
miette = { version = "7.4", features = ["fancy"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
