[package]
name = "design-data-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Design Data Specification validation core (structural + graph rules)"

[lib]
path = "src/lib.rs"

[dependencies]
jsonschema = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4"] }
walkdir = "2.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }

[features]
default = []
figma = ["dep:reqwest", "dep:tokio"]

[dev-dependencies]
