[package]
name = "design-data-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive TUI for Spectrum design data authoring and inspection"

[lib]
path = "src/lib.rs"

[[bin]]
name = "design-data-tui"
path = "src/main.rs"

[dependencies]
design-data-core = { path = "../core" }
ratatui = "0.28"
crossterm = "0.28"
tui-input = "0.10"
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.4", features = ["fancy"] }
thiserror = "2.0"
serde_json = "1"

[dev-dependencies]
