[package]
name = "design-data-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive TUI for Spectrum design data authoring and inspection"

[lib]
path = "src/lib.rs"

[dependencies]
design-data-core = { path = "../core" }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["serde"] }
tui-input = "0.10"
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.4", features = ["fancy"] }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
