[package]
name = "design-data-tui"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive TUI for Spectrum design data authoring and inspection"

[lib]
path = "src/lib.rs"

[dependencies]
design-data-core = { path = "../core" }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.29", features = ["serde"] }
tui-input = "0.15"
tui-popup = "0.7"
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.4", features = ["fancy"] }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
unicode-width = "0.2"
ratatui-interact = "0.5"

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["filters"] }
